[metadata]
name = HATfix
version = 0.1
license = GPL-3.0
description = Plugin for KIMMDY
long_description = file: README.md
author = Eric Hartmann
author_email = eric.hartmann@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy<=1.23
    MDAnalysis>=2.5.0

python_requires = >= 3.9
   
[options.packages.find]
where=src

[options.entry_points]
kimmdy.reaction_plugins =
    hat_fixed_rate = HATfix.reaction:FixedRateHAT
